--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,19 +13,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      user: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2   # ❌ "user" → ✅ "uses"
 
-    - name: Set up Python
-      user: actions/setup-python@v2
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v2   # ❌ "user" → ✅ "uses"
+        with:
+          python-version: '3.9'
 
-    - name: install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest streamlit
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest streamlit
 
-    - name: Run tests
-      run: |
-      pytest _test.py
+      - name: Run tests
+        run: |
+          pytest _test.py   # ❌ Indentation & typo
